--- a/lib/src/config/l10n/arb/app_pt_BR.arb
+++ b/lib/src/config/l10n/arb/app_pt_BR.arb
@@ -375,5 +375,9 @@
     "exchangeRateButtonTooltip": "Cotação",
     "@exchangeRateButtonTooltip": {
         "description": "Tooltip do botão de cotação na home"
+    },
+    "ads": "Anúncios",
+    "@ads": {
+        "description": "Título ou rótulo para a seção de anúncios de imóveis"
     }
 }
