--- a/lib/src/config/l10n/arb/app_pt.arb
+++ b/lib/src/config/l10n/arb/app_pt.arb
@@ -375,5 +375,9 @@
     "exchangeRateButtonTooltip": "Câmbio",
     "@exchangeRateButtonTooltip": {
         "description": "Tooltip do botão de câmbio na home"
+    },
+    "ads": "Anúncios",
+    "@ads": {
+        "description": "Título ou rótulo para a secção de anúncios de imóveis"
     }
 }
